// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider renders as vertical 1`] = `
<DocumentFragment>
  .emotion-0 {
  border-style: solid;
  border-color: #C6C6C6;
  border-width: 1px;
  border-width: 0px;
  margin: 0;
  border-left-width: 1px;
  display: inline-block;
  height: 100%;
}

<hr
    aria-hidden="true"
    class="emotion-0"
    data-testid="divider"
  />
</DocumentFragment>
`;

exports[`Divider renders with default styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  border-style: solid;
  border-color: #C6C6C6;
  border-width: 1px;
  border-width: 0px;
  margin: 0;
  border-top-width: 1px;
  width: 100%;
}

<hr
    aria-hidden="true"
    class="emotion-0"
    data-testid="divider"
  />
</DocumentFragment>
`;

exports[`Divider renders with logical prop overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  border-style: solid;
  border-color: #C6C6C6;
  border-width: 1px;
  border-width: 0px;
  margin: 0;
  border-left-width: 1px;
  display: inline-block;
  height: 100%;
  margin-block: 20px;
  padding-inline: 30px;
}

<hr
    aria-hidden="true"
    class="emotion-0"
    data-testid="divider"
  />
</DocumentFragment>
`;
